--- a/src/resources/main.scss
+++ b/src/resources/main.scss
@@ -1,4 +1,5 @@
 @import "./reset";
+@import "./variables";
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
 body {
@@ -20,6 +21,51 @@ body {
             position: absolute;
             bottom: 0;
             right: 0;
+        }
+    }
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    &__title {
+        font-weight: 700;
+        font-size: 1.75rem;
+        & span {
+            color: $accent-color;
+        }
+    }
+
+    .menu {
+
+        &__list {
+            display: flex;
+            gap: 24px;
+        }
+    
+        &__item {
+            font-size: 1.5rem;
+            font-weight: 700;
+            position: relative;
+            cursor: pointer;
+            & a {
+                text-decoration: none;
+                color: inherit;
+            }
+            &_active {
+                color: $accent-color;
+            }
+            
+            &:not(:first-of-type)::before {
+                content: "/";
+                color: black;
+                position: absolute;
+                left: -16px;
+            }
+            
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
