add characters grid

--- a/src/pages/home-page/components/random-character/_random.scss
+++ b/src/pages/home-page/components/random-character/_random.scss
@@ -18,6 +18,7 @@
         &__img {
             margin-right: 30px;
             img {
+                max-width: none;
                 width: 218px;
                 height: 218px;
                 object-fit: cover;
