--- a/src/pages/home-page/components/character-info/_character-info.scss
+++ b/src/pages/home-page/components/character-info/_character-info.scss
@@ -45,5 +45,16 @@
         padding: 4px 10px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         font-size: 0.875rem;
+        cursor: pointer;
+        transition: transform 0.2s ease-in-out 0s;
+        &:hover {
+            transform: translate(0px, -2px);
+            color: $accent-color;
+        }
+        a {
+            display: block;
+            color: inherit;
+            text-decoration: none;
+        }
     }
 }
