add addition characters loading

--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -18,6 +18,15 @@
         transform: translate(0, -3px);
     }
 
+    &:disabled,
+    &[disabled] {
+        color: rgb(156, 156, 156);
+        transform: none;
+        &::after {
+            background-color: $secondary-color;
+        }
+    }
+
     &:active {
         transform: translate(0, 0);
     }
